BL-6628 Fix more contrast issues

--- a/src/app/modules/static/static.less
+++ b/src/app/modules/static/static.less
@@ -1,7 +1,7 @@
 /*Will be compiled down to a single stylesheet with your sass files*/
 
 .staticPage a {
-  color: @bloomRed;
+  color: var(--link-color);
 }
 
 div.para {
