--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -68,6 +68,7 @@
 @font-family-sans-serif: sans-serif, "Helvetica", "PT Sans";
 
 @link-color: @bloomRed;
+@link-color-high-contrast: #923930; // 2/3 of @Bloom-red for each color.
 @link-hover-color: @bloomRed;
 
 /**
